# database

./: .continueignore  .gitignore  .gitleaks.toml  .lychee.toml  AGENT.md  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
docs/: 00_scope.md  01_domain_model.md  02_pipeline.md  03_open_questions.md  04_smoke_runbook.md  05_audit_reference.md  06_charte_canonique_v1.md  07_canonical_id_migration_v1.md  08_goldset_v1.md  09_remediation_execution.md  10_program_kpis.md  README.md  audit_complet_v1.md  codex_execution_plan.md  pack_enrichment_operations_v1.md  runtime_consumption_v1.md  security_incident_runbook.md
schemas/: bird_image_pedagogical_review_v1_2.schema.json  distractor_ai_proposal_v1.schema.json  distractor_relationship_v1.schema.json  enrichment_enqueue_v1.schema.json  enrichment_execute_v1.schema.json  enrichment_request_status_v1.schema.json  golden_pack_manifest_v1.schema.json  golden_pack_v1.schema.json  golden_pack_validation_report_v1.schema.json  pack_compile_operation_v1.schema.json  pack_compiled_v1.schema.json  pack_compiled_v2.schema.json  pack_create_v1.schema.json  pack_diagnose_operation_v1.schema.json  pack_diagnostic_v1.schema.json  pack_materialization_v1.schema.json  pack_materialization_v2.schema.json  pack_materialize_operation_v1.schema.json  pack_pool_v1.schema.json  pack_spec_v1.schema.json  pedagogical_media_profile_v1.schema.json  playable_corpus_v1.schema.json  qualified_resources_bundle.schema.json  qualified_resources_bundle_v3.schema.json  qualified_resources_bundle_v4.schema.json  runtime_answer_signals_v1.schema.json  serving_bundle_v1.schema.json  session_snapshot_v1.schema.json  session_snapshot_v2.schema.json  taxon_localized_name_patch_v1.schema.json
scripts/: analyze_pmp_policy_broader_human_review.py  analyze_pmp_policy_v1_1_second_review.py  apply_taxon_localized_name_patches_v1.py  apply_taxon_localized_names_sprint12.py  audit_bird_image_review_v12_dry_run.py  audit_bird_image_review_v12_live_mini_run.py  audit_database_integrity_for_runtime_handoff.py  audit_distractor_relationships_v1_current_state.py  audit_inat_similarity_enrichment_gap.py  audit_pedagogical_image_profiles.py  audit_pedagogical_media_profile_v1_fixture_dry_run.py  audit_pedagogical_media_profile_v1_live_mini_run.py  audit_pedagogical_media_profile_v1_snapshot_outputs.py  audit_phase3_distractors.py  audit_pmp_policy_v1_1_delta.py  audit_pmp_policy_v1_snapshot.py  audit_referenced_taxon_shell_needs_for_distractors.py  audit_taxon_localized_names_for_distractors.py  audit_taxon_localized_names_v1.py  build_controlled_inat_snapshot_subset.py  build_distractor_readiness_v1.py  build_goldset_v1.py  check_doc_code_coherence.py  check_docs_hygiene.py  check_palier1_v11_baseline.py  compare_distractor_readiness_sprint11_sprint12.py  convert_source_attested_names_to_localized_name_patches_sprint14.py  diagnose_golden_pack_belgian_birds_mvp_v1_blockers.py  enrich_taxon_localized_names_multisource_v1.py  export_golden_pack_runtime_handoff.py  export_pmp_policy_human_review.py  export_pmp_policy_v1_1_second_review.py  fetch_inat_snapshot.py  generate_distractor_relationship_candidates_v1.py  generate_smoke_report.py  governance_review.py  inspect_database.py  label_pmp_policy_human_review_with_ai.py  manage_confusions.py  manage_packs.py  (+38 more)
tests/: conftest.py  test_ai.py  test_ai_review_contract_v12_integration.py  test_analyze_pmp_policy_broader_human_review.py  test_analyze_pmp_policy_v1_1_second_review.py  test_audit_bird_image_review_v12_dry_run.py  test_audit_bird_image_review_v12_live_mini_run.py  test_audit_database_integrity_for_runtime_handoff.py  test_audit_distractor_relationships_v1_current_state.py  test_audit_inat_similarity_enrichment_gap.py  test_audit_pedagogical_media_profile_v1_fixture_dry_run.py  test_audit_pedagogical_media_profile_v1_live_mini_run.py  test_audit_pedagogical_media_profile_v1_snapshot_outputs.py  test_audit_pmp_policy_v1_1_delta.py  (+71 more)
(+576 files in other folders)
