[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-core"
version = "0.1.0"
description = "Minimal bird-focused knowledge-core MVP for a future biodiversity learning platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0,<5",
  "Pillow>=10,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.4,<1",
]

[project.scripts]
database-run-pipeline = "database_core.cli:run_pipeline_entrypoint"
database-inspect = "database_core.cli:inspect_entrypoint"
database-fetch-inat-snapshot = "database_core.cli:fetch_inat_snapshot_entrypoint"
database-qualify-inat-snapshot = "database_core.cli:qualify_inat_snapshot_entrypoint"
database-review-overrides = "database_core.cli:review_overrides_entrypoint"
database-governance-review = "database_core.cli:governance_review_entrypoint"
database-migrate = "database_core.cli:migrate_entrypoint"
database-pack = "database_core.cli:pack_entrypoint"
database-confusion = "database_core.cli:confusion_entrypoint"
database-runtime-read-owner = "database_core.runtime_read.http_server:main"
database-editorial-write-owner = "database_core.editorial_write.http_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration_db: tests that require a live PostgreSQL connection",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
